# lineage

./: CMakeLists.txt  README.md  init.sh
shader/: default_fragment_shader.glsl  default_vertex_shader.glsl  prototype_fragment_shader.glsl  prototype_vertex_shader.glsl
src/: api.hpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  constants.cpp  constants.hpp  debug.cpp  debug.hpp  default_render_manager.cpp  default_render_manager.hpp  default_state_manager.cpp  default_state_manager.hpp  input_manager.cpp  input_manager.hpp  main.cpp  mesh.hpp  object.hpp  opengl.cpp  opengl.hpp  opengl_error.cpp  opengl_error.hpp  prototype_render_manager.cpp  prototype_render_manager.hpp  prototype_state_manager.cpp  prototype_state_manager.hpp  render_manager.hpp  scene_builder.cpp  scene_builder.hpp  scene_graph.cpp  scene_graph.hpp  scene_node.cpp  scene_node.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  shader_source.cpp  shader_source.hpp  state_manager.hpp  (+8 more)
